# avgdistinsqr

./: CMakeLists.txt
sources/: main.cpp
